Fix menu on mobile devices on tag hierarchy

--- a/dynamic-resources/css/styles.css
+++ b/dynamic-resources/css/styles.css
@@ -83,6 +83,10 @@ input {
   }
 }
 
+.navbar {
+  z-index: 99999;
+}
+
 .horizontalScroll {
   width: 400px;
   overflow: auto;
